feat(server): adds new auth endpoint, update swagger appropriately
